--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -2712,6 +2712,11 @@ tbody.collapse.in {
   white-space: nowrap;
   vertical-align: middle; }
 
+.input-group-fld {
+  min-width: px;
+  white-space: nowrap;
+  vertical-align: middle; }
+
 .input-group {
   /*border-collapse: collapse;*/
   border-spacing: 0; }
@@ -2728,7 +2733,10 @@ tbody.collapse.in {
     min-width: 35px;
     font-size: 0.675rem; } }
 .input-group-btn:not(:last-child) > .btn, .well.well-sm.bg-faded .input-group-btn:not(:last-child) > .btn-sm, .well.well-sm.bg-faded .btn-group-sm.input-group-btn:not(:last-child) > .btn,
-.input-group-btn:not(:last-child) > .btn-group {
+.input-group-btn:not(:last-child) > .fld,
+.input-group-btn:not(:last-child) > .btn-group, .input-group-fld:not(:last-child) > .btn, .well.well-sm.bg-faded .input-group-fld:not(:last-child) > .btn-sm, .well.well-sm.bg-faded .btn-group-sm.input-group-fld:not(:last-child) > .btn,
+.input-group-fld:not(:last-child) > .fld,
+.input-group-fld:not(:last-child) > .btn-group {
   margin-right: -1px; }
 
 .nav {
