styles for amounts

--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -6,7 +6,13 @@
 }
 
 .input-group-btn__fld {
-  min-width: 100px !important;
+    width: 250px;
+}
+
+.input-group-btn__sel {
+    display: block;
+    width: 80px;
+    margin-left: -1px;
 }
 
 .input-group {
