styles for amounts

--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -6,13 +6,13 @@
 }
 
 .input-group-btn__fld {
-    width: 250px;
+    width: 250px !important;
 }
 
 .input-group-btn__sel {
-    display: block;
-    width: 80px;
-    margin-left: -1px;
+    display: block !important;
+    width: 80px !important;
+    margin-left: -1px !important;
 }
 
 .input-group {
