--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -2713,12 +2713,12 @@ tbody.collapse.in {
   vertical-align: middle; }
 
 .input-group-btn__fld {
-  width: 250px; }
+  width: 250px !important; }
 
 .input-group-btn__sel {
-  display: block;
-  width: 80px;
-  margin-left: -1px; }
+  display: block !important;
+  width: 80px !important;
+  margin-left: -1px !important; }
 
 .input-group {
   /*border-collapse: collapse;*/
