--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9073,7 +9073,8 @@ ul.leaders span:first-child {
 ul.leaders span + span {
   float: right;
   padding-left: 0.33em;
-  background: white; }
+  background: white;
+  min-width: 80px; }
 
 /** /DOTS **/
 /** PRELOADER **/
