--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -158,7 +158,12 @@ ul.leaders span + span {
   float: right;
   padding-left: 0.33em;
   background: white;
-  min-width: 80px
+}
+
+ul.leaders span + div {
+  float: right;
+  padding-left: 0.33em;
+  background: white;
 }
 
 /** /DOTS **/
