--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9073,8 +9073,12 @@ ul.leaders span:first-child {
 ul.leaders span + span {
   float: right;
   padding-left: 0.33em;
-  background: white;
-  min-width: 80px; }
+  background: white; }
+
+ul.leaders span + div {
+  float: right;
+  padding-left: 0.33em;
+  background: white; }
 
 /** /DOTS **/
 /** PRELOADER **/
