--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -223,3 +223,11 @@ ul.leaders span + div {
 .borderless {
   border: none;
 }
+
+@media print {
+  /* All your print styles go here */
+  breadcrumb, .card-header, footer, aside, sidebar, header { display: none !important; }
+  .card {
+    border: none
+  }
+}
