--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9125,6 +9125,13 @@ ul.leaders span + div {
 .borderless {
   border: none; }
 
+@media print {
+  /* All your print styles go here */
+  breadcrumb, .card-header, footer, aside, sidebar, header {
+    display: none !important; }
+
+  .card {
+    border: none; } }
 .cm-contract {
   position: relative;
   background: #fff;
