--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -231,3 +231,14 @@ ul.leaders span + div {
     border: none
   }
 }
+
+/** GRID SPINKIT WAVE **/
+
+.grid-loading-spin {
+  border: 1px solid #d1d4d7;
+  border-top: none;
+  margin-top: -40px;
+  padding-top: 40px;
+}
+
+/** /GRID SPINKIT WAVE **/
