--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -164,7 +164,12 @@ ul.leaders span + div {
   float: right;
   padding-left: 0.33em;
   background: white;
-  max-width: 210px
+}
+
+@media print {
+  ul.leaders span + div {
+    max-width: 200px
+  }
 }
 
 /** /DOTS **/
